# rust_tcp_finance_server

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
config/: config.toml
src/: client.rs  client_handler.rs  config.rs  lib.rs  main.rs  server.rs  utils.rs
tests/: utils_tests.rs
