[package]
name = "rust_tcp_finance_server"
version = "0.1.0"
edition = "2021"

# Description of the project
description = "A multithreaded TCP server in Rust for simulating stock price streaming and providing statistical analysis."
authors = ["Paul Nikholas Lopez <nik.lopez381@gmail.com>"]
license = "MIT"
repository = "https://github.com/tembolo1284/rust_tcp_finance_server"

# Add lib target
[lib]
name = "rust_tcp_finance_server"
path = "src/lib.rs"

# Add bin target
[[bin]]
name = "rust_tcp_finance_server"
path = "src/main.rs"

[dependencies]
rand = "0.8"             # For generating random prices and tickers
serde = { version = "1.0", features = ["derive"] } # For parsing config files
toml = "0.5"             # For loading and parsing the configuration file

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] } # For potential async support in tests
